2005-12-22  Steven G. Kargl  <kargls@comcast.net>

	* decl.c (gfc_match_old_kind_spec,match_type_spec): Use gfc_std_notify
	to report nonstandard intrinsic type declarations.

2005-12-21  Erik Edelmann  <eedelman@gcc.gnu.org>

	PR fortran/25423
	* parse.c (parse_where_block): break instead of "fall
	through" after parsing nested WHERE construct.

2005-12-20  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR fortran/24268
	* io.c (format_lex): Allow whitespace within text of format specifier.

2005-12-20  Steven G. Kargl  <kargls@comcast.net>
            Tobias Schlueter <tobias.schlueter@physik.uni-muenchen.de>

	PR fortran/25458
	* simplify.c (gfc_simplify_ibset, gfc_simplify_not): Add call to
	twos_complement.

2005-12-14  Erik Edelmann  <eedelman@gcc.gnu.org>

	PR fortran/18197
	* resolve.c (resolve_formal_arglist): Remove code to set
	the type of a function symbol from it's result symbol.

2005-12-12  Steven G. Kargl  <kargls@comcast.net>

	PR fortran/25078
	* match.c (gfc_match_equivalence):  Count number of objects.

2005-12-13  Thomas Koenig  <Thomas.Koenig@online.de>

	PR fortran/23815
	* io.c (top level):  Add convert to io_tag.
	(resolve_tag):  convert is GFC_STD_GNU.
	(match_open_element):  Add convert.
	(gfc_free_open):  Likewise.
	(gfc_resolve_open):  Likewise.
	(gfc_free_inquire):  Likewise.
	(match_inquire_element):  Likewise.
	* dump-parse-tree.c (gfc_show_code_node):  Add
	convet for open and inquire.
	gfortran.h: Add convert to gfc_open and gfc_inquire.
	* trans-io.c (gfc_trans_open):  Add convert.
	(gfc_trans_inquire):  Likewise.
	* ioparm.def:  Add convert to open and inquire.
	* gfortran.texi:  Document CONVERT.

2005-12-08  Erik Edelmann  <eedelman@gcc.gnu.org>

	PR fortran/25292
	* check.c (gfc_check_associated): Allow function results
	as actual arguments to ASSOCIATED.  Moved a misplaced
	comment.

2005-12-07  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/15809
	* trans-decl.c (gfc_get_symbol_decl):  In the case of automatic